[gd_scene load_steps=2 format=1]

[ext_resource path="res://UI/main_menu/solo_menu/solo_menu.gd" type="Script" id=1]

[node name="solo_menu" type="Node2D"]

script/script = ExtResource( 1 )

[node name="panel" type="Panel" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 10.0
margin/top = 10.0
margin/right = 210.0
margin/bottom = 440.0

[node name="solo_menu_label" type="Label" parent="panel"]

anchor/right = 1
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 10.0
margin/right = 0.0
margin/bottom = 30.0
text = "Single Player versus AI"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="nightmare_button" type="Button" parent="panel"]

anchor/right = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 10.0
margin/top = 60.0
margin/right = 10.0
margin/bottom = 80.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Nightmare"
flat = false

[node name="hard_button" type="Button" parent="panel"]

anchor/right = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 10.0
margin/top = 110.0
margin/right = 10.0
margin/bottom = 130.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Hard"
flat = false

[node name="medium_button" type="Button" parent="panel"]

anchor/right = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 10.0
margin/top = 160.0
margin/right = 10.0
margin/bottom = 180.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Medium"
flat = false

[node name="easy_button" type="Button" parent="panel"]

anchor/right = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 10.0
margin/top = 210.0
margin/right = 10.0
margin/bottom = 230.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Easy"
flat = false

[node name="back_button" type="Button" parent="panel"]

anchor/top = 1
anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 10.0
margin/top = 30.0
margin/right = 10.0
margin/bottom = 10.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Back"
flat = false

[connection signal="pressed" from="panel/nightmare_button" to="." method="_on_nightmare_button_pressed"]

[connection signal="pressed" from="panel/hard_button" to="." method="_on_hard_button_pressed"]

[connection signal="pressed" from="panel/medium_button" to="." method="_on_medium_button_pressed"]

[connection signal="pressed" from="panel/easy_button" to="." method="_on_easy_button_pressed"]

[connection signal="pressed" from="panel/back_button" to="." method="_on_back_button_pressed"]


